Fix title spacing issue services 4th article

--- a/css/320andup-scss.css
+++ b/css/320andup-scss.css
@@ -273,9 +273,15 @@ a.button:hover {
 #containerheaderportfolio * {
   color: white; }
 
-#containerheaderportfolio #menu a:hover {
-  text-decoration: none;
-  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4); }
+#containerheaderportfolio #menu a {
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out; }
+  #containerheaderportfolio #menu a:hover {
+    text-decoration: none;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4); }
 #containerheaderportfolio a.button.white {
   color: #d75240; }
 
@@ -1976,6 +1982,8 @@ nav[role="navigation"] a {
 #services article header img {
   margin: 1px 10px 15px;
   float: left; }
+#services article:nth-child(4) header img {
+  margin-right: 7px; }
 
 #blog article footer {
   margin-top: -15px; }
