--- a/css/scss/_design.scss
+++ b/css/scss/_design.scss
@@ -99,6 +99,9 @@ nav[role="navigation"] a{
 			margin: 1px 10px 15px;
 			float: left;
 		}
+		&:nth-child(4) header img{
+			margin-right: 7px;
+		}
 	}
 }
 
